--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,21 @@
 <pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
 <pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
 </pl-page></p>
+<p><pl-page>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+</pl-page></p>
+<p><pl-page>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+</pl-page></p>
+<p><pl-page>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+</pl-page></p>
+<p><pl-page>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+<pl-frameholder><iframe src='./galley.html'></iframe></pl-frameholder>
+</pl-page></p>
 <script src='/browserified/mudom+linefinder.js'></script>
 <script src='./ops2.js'></script>
