--- a/public/galley.html
+++ b/public/galley.html
@@ -6,6 +6,7 @@
 <p><link rel=stylesheet href='./reset.css'>
 <link rel=stylesheet href='./demo-galley.css'></p>
 </head>
+<p><pl-title>Alice in iFrameland</pl-title></p>
 <mu-galley>
 <p>
 Alice was beginning to get very tired of sitting by her sister on the
